fix wrong alignment for avatar

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -27,12 +27,12 @@ footer.footer
     width: 90%
     margin: 0 auto
 
-    .avatar
+    .avatar .image
       float: right
 
       img
         width: 96px
-        border-radius: 75px
+        border-radius: 100px
 
 
 aside#sidebar
